made shopka main content and style main

--- a/index.html
+++ b/index.html
@@ -33,33 +33,342 @@
       </aside>
       <div class='main__content'>
         <div class='main__navigation'>
-          <select></select>
-          <select></select>
-          <select></select>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div class="main__select__useless__case">
+            <select class='select__useless'>
+              <option>Useless first</option>
+            </select>
+          </div>
+          <div class="main__select__condition__case">
+            <select class='select__condition'>
+              <option>Condition</option>
+            </select>
+          </div>
+          <div class="main__select__delivery__case">
+            <select class='select__delivery'>
+              <option>Delivery options</option>
+            </select>
+          </div>
+          <div class='main__navigation__buttons'>
+            <div><button>Show all</button></div>
+            <div><button>Auction</button></div>
+            <div><button>Buy now</button></div>
+          </div>
+          <div class='main__sort__buttons'>
+          </div>
         </div>
         <div class='main__search__tags'>
+          <div class="search__tag__related">
+            <p>Related</p>
+          </div>
+          <div class="search__tag__worldwide">
+            <p>worldwide shipping</p>
+          </div>
+          <div class="search__tag__under">
+            <p>under $50</p>
+          </div>
+          <div class="search__tag__kitten">
+            <p>kitten</p>
+          </div>
+          <div class="search__tag__plastic">
+            <p>plastic plugs</p>
+          </div>
+          <div class="search__tag__pucker">
+            <p>pucker shoes</p>
+          </div>
+          <div class="search__tag__vintage">
+            <p>vintage typewriter</p>
+          </div>
         </div>
         <div class='main__content__cards'>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
-          <div class='content__card'></div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/01.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>
+                Vintage Typewriter to post awesome stories about UI design and webdev.
+              </p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$49.50</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>Eligible for Shipping To Mars or somewhere else</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/02.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>Lee Pucker design. Leather botinki for handsome designers. Free shipping.</p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$13.95</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>1258 bids, 359 watchers
+                $5.95 for shipping</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/03.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>Timesaving kitten to save months on development. Playful, cute, cheap!</p>
+            </div>
+            <div class='card__price__case'>
+              <a class='card__price'>$128.99</a>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>Eligible for nothing :(</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/04.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>Plastic useless plugs and tubes for high-fidelity prototyping. Fit & Eat!</p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$12.48</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>Wordwide shitting available
+                Buyers protection possible!</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/05.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>Creativity stimulating lotion. Drink every morning to generate better ideas!</p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$12.48</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/06.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>Prototyping items to create a lot if useless things...</p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$128.99</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>Showcasing onHovered state</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/07.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>John Von Ebalkin SPRING </p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$13.95</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>1258 bids, 359 watchers
+                $5.95 for shipping</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/08.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>Envelope, Stripes, Pencil and etc. Purchase this kit today and feel OKAY</p>
+           </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$9.50</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>Eligible for Shipping To Mars or somewhere else</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/09.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>Professional teadrinking set for every designer and developer</p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$128.99</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>Eligible for nothing :(</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/10.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>One string Bonsai description</p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$11.68</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/11.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>Simply best item in town to shine bright with your Nine Inch Nails</p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$1.25</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>Eligible for Shipping To Mars or somewhere else</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
+          <div class='content__card'>
+            <div class='card__icon__case'>
+              <img class='card__icon' src="./img/main/12.png" alt="<logo>">
+            </div>
+            <div class='card__content__case'>
+              <p class='card__content'>KISTOCHKI & KRASIBO. Top cosmetics brand from Chelyabinsk is here!</p>
+            </div>
+            <div class='card__price__case'>
+              <p class='card__price'>$23.25</p>
+            </div>
+            <div class='card__description__case'>
+              <p class='card__description'>1258 bids, 359 watchers
+                $5.95 for shipping</p>
+            </div>
+            <div class='card__buttons__case'>
+              <img class='card__star__icon' src="./img/main/star01.png" alt="<logo>">
+              <div class='card__watch__button__case'>
+                <img class='card__watch_icon' src="./img/main/Vector.png" alt="<logo>">
+                <button class='button__watch'>Watch</button>
+              </div>
+            </div>
+          </div>
         </div>
         <div class='main__content__tabs'>
-          <div class='content__tab'></div>
-          <div class='content__tab'></div>
-          <div class='content__tab'></div>
+          <div class='content__tab__case'>
+            <img class='content__tab__icon' src="./img/main/tab01.png" alt="<logo>">
+            <div class='tab__title'>
+              <p class='tab__title__text'>Clear & Usable user flows</p>
+            </div>
+            <div class='tab__description'>
+              <p class='tab__description__text'>Let’s boost yout marketplace</p>
+            </div>
+          </div>
+          <div class='content__tab__case'>
+            <img class='content__tab__icon' src="./img/main/tab02.png" alt="<logo>">
+            <div class='tab__title'>
+              <p class='tab__title__text'>Fine & Styled components</p>
+            </div>
+            <div class='tab__description'>
+              <p class='tab__description__text'>Speed up with Setproduct templates</p>
+            </div>
+          </div>
+          <div class='content__tab__case'>
+            <img class='content__tab__icon' src="./img/main/tab03.png" alt="<logo>">
+            <div class='tab__title'>
+              <p class='tab__title__text'>Customizable & Reusable</p>
+            </div>
+            <div class='tab__description'>
+              <p class='tab__description__text'>Take our UX patterns and rebuild</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
