create shopka nav-bar and main tabs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,54 @@
         <img class='header__user__logo' src="./img/header/Edward Powlowski.png" alt="<logo>">
     </header>
     <nav>
-
+      <div class="nav__tab__clothing">
+        <img class='nav__tab__icon' src="./img/nav-bar/01nav.png" alt="<logo>">
+        <a class='nav__link'>Clothing & Shoes</a>
+      </div>
+      <div class="nav__tab__entertainment">
+        <img class='nav__tab__icon' src="./img/nav-bar/02nav.png" alt="<logo>">
+        <a class='nav__link'>Entertainment</a>
+      </div>
+      <div class="nav__tab__music">
+        <img class='nav__tab__icon' src="./img/nav-bar/03nav.png" alt="<logo>">
+        <a class='nav__link'>Music</a>
+      </div>
+      <div class="nav__tab__sport">
+        <img class='nav__tab__icon' src="./img/nav-bar/04nav.png" alt="<logo>">
+        <a class='nav__link'>Sport & Lifestyle</a>
+      </div>
+      <div class="nav__tab__pets">
+        <img class='nav__tab__icon' src="./img/nav-bar/05nav.png" alt="<logo>">
+        <a class='nav__link'>Pets</a>
+      </div>
+      <div class="nav__tab__kitchen">
+        <img class='nav__tab__icon' src="./img/nav-bar/06nav.png" alt="<logo>">
+        <a class='nav__link'>Kitchen Accessories</a>
+      </div>
+      <div class="nav__tab__travel">
+        <img class='nav__tab__icon' src="./img/nav-bar/07nav.png" alt="<logo>">
+        <a class='nav__link'>Travel Equipment</a>
+      </div>
+      <div class="nav__tab__growing">
+        <img class='nav__tab__icon' src="./img/nav-bar/08nav.png" alt="<logo>">
+        <a class='nav__link'>Growing & Garden</a>
+      </div>
+      <div class="nav__tab__electrical">
+        <img class='nav__tab__icon' src="./img/nav-bar/09nav.png" alt="<logo>">
+        <a class='nav__link'>Electrical Tools</a>
+      </div>
+      <div class="nav__tab__mother">
+        <img class='nav__tab__icon' src="./img/nav-bar/10nav.png" alt="<logo>">
+        <a class='nav__link'>Mother Care</a>
+      </div>
+      <div class="nav__tab__toys">
+        <img class='nav__tab__icon' src="./img/nav-bar/11nav.png" alt="<logo>">
+        <a class='nav__link'>Toys & Entertainment/a>
+      </div>
+      <div class="nav__tab__vintage">
+        <img class='nav__tab__icon' src="./img/nav-bar/12nav.png" alt="<logo>">
+        <a class='nav__link'>Vintage</a>
+      </div>
     </nav>
     <main>
       <aside>
@@ -155,6 +202,7 @@
             </div>
             <div class='card__price__case'>
               <p class='card__price'>$12.48</p>
+              <img class='card__price__icon' src="./img/main/50off.png" alt="<logo>">
             </div>
             <div class='card__description__case'>
               <p class='card__description'>Wordwide shitting available
@@ -306,6 +354,7 @@
             </div>
             <div class='card__price__case'>
               <p class='card__price'>$1.25</p>
+              <img class='card__price__icon' src="./img/main/cool.png" alt="<logo>">
             </div>
             <div class='card__description__case'>
               <p class='card__description'>Eligible for Shipping To Mars or somewhere else</p>
