--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       <div class="main__content">
         <div class='main__navigation flex_row'>
           <div class="main__select__useless__case flex_row">
-            <select class='select__useless'>
+            <select class='select__useless select__active'>
               <option>Useless first</option>
             </select>
             <img class='useless__sort-by' src="./img/main/sort.png" alt="<logo>">
@@ -477,12 +477,14 @@
               </svg>                
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -512,7 +514,7 @@
               </svg>              
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <span class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
@@ -546,12 +548,14 @@
               </svg>                               
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -587,12 +591,14 @@
               </svg>                               
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -622,12 +628,14 @@
               </svg>             
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -656,12 +664,14 @@
               </svg>                 
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -691,12 +701,14 @@
               </svg>                 
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -725,12 +737,14 @@
               </svg>                               
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -759,12 +773,14 @@
               </svg>                              
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -794,12 +810,14 @@
               </svg>                              
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -834,12 +852,14 @@
               </svg>                               
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
@@ -869,12 +889,14 @@
               </svg>                
             </span>
             <div class='card__watch__button__case flex_row'>
-              <span class='card__watch_icon'>
+              <div class='card__watch_icon flex_row'>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.07 11.585L7 11.655L6.923 11.585C3.598 8.568 1.4 6.573 1.4 4.55C1.4 3.15 2.45 2.1 3.85 2.1C4.928 2.1 5.978 2.8 6.349 3.752H7.651C8.022 2.8 9.072 2.1 10.15 2.1C11.55 2.1 12.6 3.15 12.6 4.55C12.6 6.573 10.402 8.568 7.07 11.585ZM10.15 0.699997C8.932 0.699997 7.763 1.267 7 2.156C6.237 1.267 5.068 0.699997 3.85 0.699997C1.694 0.699997 0 2.387 0 4.55C0 7.189 2.38 9.352 5.985 12.621L7 13.545L8.015 12.621C11.62 9.352 14 7.189 14 4.55C14 2.387 12.306 0.699997 10.15 0.699997Z" fill="#2979FF"/>
                 </svg>                  
-              </span>
-              <a class='button__watch'>Watch</a>
+              </div>
+              <div class='card__watch__text '>
+                <a class='button__watch'>Watch</a>
+              </div>
             </div>
           </div>
         </div>
