--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </span>
         </div>
         <span class='header__avatar__block'>
-          <img src="./img/header/Edward Powlowski.png" alt="<logo>">
+          <img class='header__avatar' src="./img/header/Edward Powlowski.png" alt="<logo>">
         </span>
     </header>
     <div class="main__content__container ">
@@ -1142,45 +1142,46 @@
               </div>
             </div>
           </div>
-          <div class='footer__payment__block flex_row'>
-            <div class='main__content__container flex_row'>
-            <a class='shopka__info'>Shopka © 2011  All rights reserved</a>
-            <div class='payment__icons flex_row'>
-            <a class='visa__icon'>
-              <svg width="50" height="16" viewBox="0 0 50 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_1246:248)">
-                <path d="M21.423 15.7691H17.4182L19.9231 0.28064H23.9277L21.423 15.7691Z" fill="#00579F"/>
-                <path d="M35.9409 0.659404C35.1509 0.346017 33.898 0 32.3489 0C28.394 0 25.609 2.10895 25.5919 5.12412C25.559 7.3487 27.5859 8.58429 29.1018 9.32604C30.6512 10.084 31.1779 10.5787 31.1779 11.2543C31.1621 12.2919 29.9259 12.7702 28.7728 12.7702C27.1739 12.7702 26.3172 12.5236 25.0153 11.9464L24.4879 11.6989L23.9275 15.1757C24.8668 15.6036 26.5973 15.9834 28.394 16C32.5961 16 35.3318 13.9237 35.3642 10.7105C35.3802 8.94739 34.31 7.59639 32.0026 6.49242C30.6019 5.78374 29.7441 5.30589 29.7441 4.58078C29.7605 3.9216 30.4696 3.24643 32.0508 3.24643C33.3527 3.21336 34.3093 3.52631 35.034 3.83948L35.3962 4.00394L35.9409 0.659404Z" fill="#00579F"/>
-                <path d="M41.2636 10.2821C41.5934 9.39228 42.8625 5.94853 42.8625 5.94853C42.8459 5.9816 43.1917 5.04232 43.3894 4.46569L43.6693 5.80027C43.6693 5.80027 44.4277 9.50769 44.5924 10.2821C43.9665 10.2821 42.0546 10.2821 41.2636 10.2821ZM46.2071 0.28064H43.1093C42.1541 0.28064 41.4283 0.560519 41.0161 1.56572L35.0675 15.7688H39.2696C39.2696 15.7688 39.9615 13.8572 40.1102 13.4455C40.5711 13.4455 44.659 13.4455 45.252 13.4455C45.367 13.9893 45.7299 15.7688 45.7299 15.7688H49.4379L46.2071 0.28064Z" fill="#00579F"/>
-                <path d="M14.0733 0.28064L10.1512 10.8423L9.72266 8.70024C8.99756 6.22863 6.72348 3.54327 4.18573 2.20804L7.77818 15.7526H12.0132L18.308 0.28064H14.0733Z" fill="#00579F"/>
-                <path d="M6.50928 0.28064H0.0659181L0 0.593588C5.02623 1.87889 8.355 4.97705 9.72264 8.7009L8.32193 1.58258C8.09132 0.593369 7.38265 0.31327 6.50928 0.28064Z" fill="#FAA61A"/>
-                </g>
-                <defs>
-                <clipPath id="clip0_1246:248">
-                <rect width="49.4379" height="16" fill="white"/>
-                </clipPath>
-                </defs>
-              </svg>            
-            </a>
-            <a class='master__icon'>
-              <svg width="33" height="20" viewBox="0 0 33 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_1246:255)">
-                <path d="M9.93902 20C15.4282 20 19.878 15.5228 19.878 10C19.878 4.47715 15.4282 0 9.93902 0C4.44985 0 0 4.47715 0 10C0 15.5228 4.44985 20 9.93902 20Z" fill="#EE0005"/>
-                <path d="M22.2875 20C27.7767 20 32.2266 15.5228 32.2266 10C32.2266 4.47715 27.7767 0 22.2875 0C16.7984 0 12.3485 4.47715 12.3485 10C12.3485 15.5228 16.7984 20 22.2875 20Z" fill="#F9A000"/>
-                <path d="M12.3485 10.0002C12.3485 13.1754 13.8195 16.005 16.1129 17.8366C18.4064 16.005 19.8773 13.1754 19.8773 10.0002C19.8773 6.82496 18.4064 3.99531 16.1129 2.1637C13.8202 3.99607 12.3485 6.82496 12.3485 10.0002Z" fill="#FF6300"/>
-                </g>
-                <defs>
-                <clipPath id="clip0_1246:255">
-                <rect width="32.2265" height="20" fill="white"/>
-                </clipPath>
-                </defs>
-              </svg>            
-            </a>
+          <div class='main__content__container'>
+            <div class='footer__payment__block flex_row'>
+                <a class='shopka__info'>Shopka © 2011  All rights reserved</a>
+                <div class='payment__icons flex_row'>
+                <a class='visa__icon'>
+                  <svg width="50" height="16" viewBox="0 0 50 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_1246:248)">
+                    <path d="M21.423 15.7691H17.4182L19.9231 0.28064H23.9277L21.423 15.7691Z" fill="#00579F"/>
+                    <path d="M35.9409 0.659404C35.1509 0.346017 33.898 0 32.3489 0C28.394 0 25.609 2.10895 25.5919 5.12412C25.559 7.3487 27.5859 8.58429 29.1018 9.32604C30.6512 10.084 31.1779 10.5787 31.1779 11.2543C31.1621 12.2919 29.9259 12.7702 28.7728 12.7702C27.1739 12.7702 26.3172 12.5236 25.0153 11.9464L24.4879 11.6989L23.9275 15.1757C24.8668 15.6036 26.5973 15.9834 28.394 16C32.5961 16 35.3318 13.9237 35.3642 10.7105C35.3802 8.94739 34.31 7.59639 32.0026 6.49242C30.6019 5.78374 29.7441 5.30589 29.7441 4.58078C29.7605 3.9216 30.4696 3.24643 32.0508 3.24643C33.3527 3.21336 34.3093 3.52631 35.034 3.83948L35.3962 4.00394L35.9409 0.659404Z" fill="#00579F"/>
+                    <path d="M41.2636 10.2821C41.5934 9.39228 42.8625 5.94853 42.8625 5.94853C42.8459 5.9816 43.1917 5.04232 43.3894 4.46569L43.6693 5.80027C43.6693 5.80027 44.4277 9.50769 44.5924 10.2821C43.9665 10.2821 42.0546 10.2821 41.2636 10.2821ZM46.2071 0.28064H43.1093C42.1541 0.28064 41.4283 0.560519 41.0161 1.56572L35.0675 15.7688H39.2696C39.2696 15.7688 39.9615 13.8572 40.1102 13.4455C40.5711 13.4455 44.659 13.4455 45.252 13.4455C45.367 13.9893 45.7299 15.7688 45.7299 15.7688H49.4379L46.2071 0.28064Z" fill="#00579F"/>
+                    <path d="M14.0733 0.28064L10.1512 10.8423L9.72266 8.70024C8.99756 6.22863 6.72348 3.54327 4.18573 2.20804L7.77818 15.7526H12.0132L18.308 0.28064H14.0733Z" fill="#00579F"/>
+                    <path d="M6.50928 0.28064H0.0659181L0 0.593588C5.02623 1.87889 8.355 4.97705 9.72264 8.7009L8.32193 1.58258C8.09132 0.593369 7.38265 0.31327 6.50928 0.28064Z" fill="#FAA61A"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_1246:248">
+                    <rect width="49.4379" height="16" fill="white"/>
+                    </clipPath>
+                    </defs>
+                  </svg>            
+                </a>
+                <a class='master__icon'>
+                  <svg width="33" height="20" viewBox="0 0 33 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_1246:255)">
+                    <path d="M9.93902 20C15.4282 20 19.878 15.5228 19.878 10C19.878 4.47715 15.4282 0 9.93902 0C4.44985 0 0 4.47715 0 10C0 15.5228 4.44985 20 9.93902 20Z" fill="#EE0005"/>
+                    <path d="M22.2875 20C27.7767 20 32.2266 15.5228 32.2266 10C32.2266 4.47715 27.7767 0 22.2875 0C16.7984 0 12.3485 4.47715 12.3485 10C12.3485 15.5228 16.7984 20 22.2875 20Z" fill="#F9A000"/>
+                    <path d="M12.3485 10.0002C12.3485 13.1754 13.8195 16.005 16.1129 17.8366C18.4064 16.005 19.8773 13.1754 19.8773 10.0002C19.8773 6.82496 18.4064 3.99531 16.1129 2.1637C13.8202 3.99607 12.3485 6.82496 12.3485 10.0002Z" fill="#FF6300"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_1246:255">
+                    <rect width="32.2265" height="20" fill="white"/>
+                    </clipPath>
+                    </defs>
+                  </svg>            
+                </a>
+              <div class='payment__privacy flex_row'>
+                <a class='privacy__info__sitemap'>Sitemap</a>
+                <a class='privacy__info__policy'>Privacy policy</a>
+              </div>
             </div>
-            <div class='payment__privacy flex_row'>
-              <a class='privacy__info__sitemap'>Sitemap</a>
-              <a class='privacy__info__policy'>Privacy policy</a>
-            </div>
+          </div>
           </div>
           </div>
           <div>
